--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-number-format": "^5.4.4",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
