--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
